# AI_News_Intelligence_Platform

./: .env.example  .gitignore  README.md  pyproject.toml
config/: pipeline_config.yaml
notebooks/: dataset_loading.ipynb  dataset_preprocessing.ipynb
scripts/: analyze_news.py  collect_news.py  preprocess_data.py  train_tiny.py
src/data/: dataset.py  preprocess.py
src/inference/: analyzer.py  engine.py  prompts.py
src/ingestion/: base_source.py  collector.py  newsapi_source.py  rss_source.py
src/models/: factory.py  tiny_config.py
src/utils/: config.py  logger.py
